--- a/vis/templates/vis/base.html
+++ b/vis/templates/vis/base.html
@@ -23,9 +23,9 @@
 <body>
 	<br>
 	<div class = "container">
-		<div class="text-center"><h1>KITE</h1>
+		<div class="text-center"><h1>AN UNSUPERVISED SYSTEM FOR TEXT EXPLORATION - KITE</h1>
 		</div>
-		<br>
+		<br><br><br>
 	</div>
 	{% block content %} {% endblock %}
 </body>
