--- a/vis/templates/vis/display.html
+++ b/vis/templates/vis/display.html
@@ -382,6 +382,7 @@
 				
 			<div class="tab-content">
 				<div id="acm" class="container tab-pane active"><br>
+					<div class="row justify-content-center"><h5>Summary of top ACM Classification Codes</h5></div>
 					<div class="row justify-content-center">
 						<table class="table table-borderless">
 							<tbody>
